# university-scheduler

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  prek.toml  solver.toml  solverforge.app.toml
src/: lib.rs  main.rs
src/api/: dto.rs  mod.rs  routes.rs  sse.rs
src/constraints/: assign_room.rs  assign_timeslot.rs  group_availability.rs  late_lesson.rs  mod.rs  no_group_conflict.rs  no_room_conflict.rs  no_teacher_conflict.rs  repeated_subject_day.rs  room_capacity.rs  room_kind.rs  teacher_availability.rs
src/data/: data_seed.rs  mod.rs
src/data/data_seed/: entrypoints.rs  (+8 more)
src/domain/: group.rs  lesson.rs  mod.rs  plan.rs  room.rs  teacher.rs  timeslot.rs  weekday.rs
src/solver/: event_payload.rs  mod.rs  service.rs
static/: app.js  dom.js  index.html  main.js  sf-config.json  state.js  views.js
static/controllers/: data-controller.js  data.js  index.js  render-controller.js  render.js  solver-controller.js  solver.js  ui-controller.js  ui.js
static/model/: dom.js  state.js
static/presenters/: group-presenter.js  index.js  overview-presenter.js  room-presenter.js  scalar-view-presenter.js  teacher-presenter.js
static/services/: api.js  sf-backend.js  sf-registry.js
static/state/: state.js
static/utils/: constants.js  index.js  timeline-utils.js
static/views/: analysis-modal.js  api-guide-view.js  api-guide.js  by-group.js  by-room.js  by-teacher.js  group-view.js  group.js  index.js  init-ui.js  layout.js  main-layout.js  room-view.js  room.js  teacher-view.js  teacher.js  timeline-manager.js  timeline-utils.js
