[package]
name = "university-scheduler"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Constraint optimizer built with SolverForge"

[[bin]]
name = "university_scheduler"
path = "src/main.rs"

[dependencies]
solverforge = { version = "0.12.0", features = ["serde", "console", "verbose-logging"] }
solverforge-ui = { version = "0.6.5" }
# Web server
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tower = "0.5.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
uuid = { version = "1.23.1", features = ["v4", "serde"] }
parking_lot = "0.12.5"
chrono = { version = "0.4.44", features = ["serde"] }
